[package]
name = "multi-transfer-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for parallel SOL transfers across multiple wallets"

[dependencies]
solana-sdk = "2.2.0"
solana-client = "2.2.0"
solana-transaction-status = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.5.31", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0.11"
chrono = "0.4"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
