[package]
name = "yellowstone-watcher"
version = "0.1.0"
edition = "2024"
description = "A service that monitors Solana blocks via Yellowstone gRPC and sends transactions"

[dependencies]
# CLI and configuration
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.11"

# Solana SDK
solana-sdk = "2.1.14"
solana-client = "2.1.14"
solana-transaction-status = "2.1.14"

# Yellowstone gRPC client
yellowstone-grpc-client = "5.0.0"
yellowstone-grpc-proto = "5.0.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
